src/tests/testfiles/binary-operators/types-3.txt
testfiles/binary-operators/types-3.c:2:9: error: invalid operands to comparison '!=' (have 'char []' and 'char')
"a" != 'b';
    ^
